--- a/views/flats.ejs
+++ b/views/flats.ejs
@@ -66,6 +66,147 @@
         </nav>
     </div>
     <div class="row main">
+        <button class="btn btn-warning filter-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFilter"
+                aria-expanded="false" aria-controls="collapseFilter">
+            Фільтри
+        </button>
+        <div class="col-12 filter collapse" id="collapseFilter">
+            <form action="/flats" method="post">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownType"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Тип
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownType">
+                        <% for (let i = 0; i < types.length; i++) { %>
+                            <li>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"
+                                           name="type" value="<%= types[i] %>" id="<%= types[i] %>">
+                                    <label class="form-check-label" for="<%= types[i] %>">
+                                        <%= types[i] %>
+                                    </label>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownStatus"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Статус
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownStatus">
+                        <% for (let i = 0; i < statuses.length; i++) { %>
+                            <li>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"
+                                           name="status" value="<%= statuses[i] %>" id="<%= statuses[i] %>">
+                                    <label class="form-check-label" for="<%= statuses[i] %>">
+                                        <%= statuses[i] %>
+                                    </label>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownArea"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Квадратні метри
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownArea">
+                        <li>
+                            <div class="input-group">
+                                <span class="input-group-text" id="sqrt-from">From</span>
+                                <input type="text" class="form-control" autocomplete="off"
+                                       name="sqrtFrom" placeholder="0" aria-describedby="sqrt-from">
+                                <span class="input-group-text" id="sqrt-to">To</span>
+                                <input type="text" class="form-control" autocomplete="off"
+                                       name="sqrtTo" placeholder="1000" aria-describedby="sqrt-to">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownRooms"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Кімнати
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownRooms">
+                        <% for (let i = 0; i < rooms.length; i++) { %>
+                            <li>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"
+                                           name="rooms" value="<%= rooms[i] %>" id="<%= rooms[i] %>">
+                                    <label class="form-check-label" for="<%= rooms[i] %>">
+                                        <%= rooms[i] %>
+                                    </label>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFloor"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Певерх
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownFloor">
+                        <li>
+                            <div class="input-group">
+                                <span class="input-group-text" id="floor-from">From</span>
+                                <input type="text" class="form-control" autocomplete="off"
+                                       name="floorFrom" placeholder="0" aria-describedby="floor-from">
+                                <span class="input-group-text" id="floor-to">To</span>
+                                <input type="text" class="form-control" autocomplete="off"
+                                       name="floorTo" placeholder="30" aria-describedby="floor-to">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownSection"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Секція
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownSection">
+                        <% for (let i = 0; i < sections.length; i++) { %>
+                            <li>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"
+                                           name="section" value="<%= sections[i] %>" id="<%= sections[i] %>">
+                                    <label class="form-check-label" for="<%= sections[i] %>">
+                                        <%= sections[i] %>
+                                    </label>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownBuilding"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        Будинок
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownBuilding">
+                        <% for (let i = 0; i < buildings.length; i++) { %>
+                            <li>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox"
+                                           name="building" value="<%= buildings[i] %>" id="<%= buildings[i] %>">
+                                    <label class="form-check-label" for="<%= buildings[i] %>">
+                                        <%= buildings[i] %>
+                                    </label>
+                                </div>
+                            </li>
+                        <% } %>
+                    </ul>
+                </div>
+                <button type="submit" class="btn btn-primary">Фільтрувати</button>
+            </form>
+        </div>
         <div class="col-12 items">
             <div class="row cards">
                 <% for (let i = 0; i < flats.length; i++) { %>
