--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -30,20 +30,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/flats">Квартири</a>
+                            <a class="nav-link" href="/flats"><%= lang.navFlats %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Контакти</a>
+                            <a class="nav-link" href="/contacts"><%= lang.navContacts %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">Про нас</a>
+                            <a class="nav-link" href="/about"><%= lang.navAbout %></a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn btn-outline-warning dropdown-toggle"
                                         type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                    Мова
+                                    <%= lang.navLang %>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <li>
@@ -52,10 +52,6 @@
                                     </li>
                                     <li>
                                         <a class="dropdown-item" style="color: #011627" href="/lang?url=about&lang=ua">UA</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" style="color: #011627"
-                                           href="/lang?url=about&lang=rus">RUS</a>
                                     </li>
                                 </ul>
                             </div>
@@ -67,32 +63,27 @@
     </div>
     <div class="row main">
         <div class="col-12">
-            Наш ЖК є футуристичним комлексом комфорт-класу з сучасними плануваннями, високою якістю будівництва та
-            розвиненою інфраструктурою у самому центрі Києва. Він створений не тільки для втілення всіх ваших запитів
-            щодо якості житла, але й для задоволення від нових технологій комфорту!
+            <%= lang.aboutMain %>
         </div>
     </div>
     <div class="row cards">
         <div class="card-group">
             <div class="card text-white bg-dark">
                 <div class="card-body">
-                    <h5 class="card-title">5 хвилин до метро</h5>
-                    <p class="card-text">Наш комлекс знаходиться усього у 5 хвилинах пішки від метро "Золоті
-                        ворота".</p>
+                    <h5 class="card-title"><%= lang.firstCardTitle %></h5>
+                    <p class="card-text"><%= lang.firstCardText %></p>
                 </div>
             </div>
             <div class="card text-white bg-dark">
                 <div class="card-body">
-                    <h5 class="card-title">Сучасний дизайн та ергономіка</h5>
-                    <p class="card-text">Ми пропонуємо найсучасніші квартири та приміщення для Вашого комфорту. Усе, що
-                        пов'язано з нашими об'єктами є високотехнологічним та новітім.</p>
+                    <h5 class="card-title"><%= lang.secondCardTitle %></h5>
+                    <p class="card-text"><%= lang.secondCardText %></p>
                 </div>
             </div>
             <div class="card text-white bg-dark">
                 <div class="card-body">
-                    <h5 class="card-title">Підземний паркінг</h5>
-                    <p class="card-text">Також, після купівлі квартири чи комерційного приміщення, у Вас буде змога
-                        придбати місце у великому та зручному підземному паркінгу у хвилині від самого комлексу.</p>
+                    <h5 class="card-title"><%= lang.thirdCardTitle %></h5>
+                    <p class="card-text"><%= lang.thirdCardText %></p>
                 </div>
             </div>
         </div>
