--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Contacts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -30,20 +30,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/flats">Квартири</a>
+                            <a class="nav-link" href="/flats"><%= lang.navFlats %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Контакти</a>
+                            <a class="nav-link" href="/contacts"><%= lang.navContacts %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">Про нас</a>
+                            <a class="nav-link" href="/about"><%= lang.navAbout %></a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn btn-outline-warning dropdown-toggle"
                                         type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                    Мова
+                                    <%= lang.navLang %>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <li>
@@ -53,10 +53,6 @@
                                     <li>
                                         <a class="dropdown-item" style="color: #011627"
                                            href="/lang?url=contacts&lang=ua">UA</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" style="color: #011627"
-                                           href="/lang?url=contacts&lang=rus">RUS</a>
                                     </li>
                                 </ul>
                             </div>
@@ -77,11 +73,11 @@
             <div class="row">
                 <div class="contacts mt-2">
                     <div>
-                        <div>Пн-Пт: 09:00 – 19:00<br>
-                            Сб-Нд
+                        <div><%= lang.contactsMonFri %>: 09:00 – 19:00<br>
+                            <%= lang.contactsSatSun %>
                             : 10:00 – 17:00
                         </div>
-                        <div>Тел: +38 (066) 07 12 164</div>
+                        <div><%= lang.contactsTel %>: +38 (066) 07 12 164</div>
                     </div>
                     <div>
                         <div class="mb-1">E-mail: sales@ukrfuturebud.com.ua</div>
@@ -94,11 +90,11 @@
         <div class="col-12 col-md-6">
             <form action="/request" method="post">
                 <div class="mb-2">
-                    <label for="InputName" class="form-label">Ім'я</label>
+                    <label for="InputName" class="form-label"><%= lang.contactsName %></label>
                     <input type="text" class="form-control" id="InputName" name="InputName" required>
                 </div>
                 <div class="mb-2">
-                    <label for="InputTel" class="form-label">Тел</label>
+                    <label for="InputTel" class="form-label"><%= lang.contactsTel %></label>
                     <input type="tel" class="form-control" id="InputTel" name="InputTel" required>
                 </div>
                 <div class="mb-2">
@@ -106,10 +102,10 @@
                     <input type="email" class="form-control" id="InputEmail" name="InputEmail" required>
                 </div>
                 <div class="mb-3">
-                    <label for="InputText" class="form-label">Повідомлення</label>
+                    <label for="InputText" class="form-label"><%= lang.contactsText %></label>
                     <textarea class="form-control" id="InputText" name="InputText" rows="3" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary mb-3">Відправити</button>
+                <button type="submit" class="btn btn-primary mb-3"><%= lang.contactsSubmit %></button>
             </form>
         </div>
     </div>
