--- a/views/flat.ejs
+++ b/views/flat.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Flat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -30,20 +30,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/flats">Квартири</a>
+                            <a class="nav-link" href="/flats"><%= lang.navFlats %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Контакти</a>
+                            <a class="nav-link" href="/contacts"><%= lang.navContacts %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">Про нас</a>
+                            <a class="nav-link" href="/about"><%= lang.navAbout %></a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn btn-outline-warning dropdown-toggle"
                                         type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                    Мова
+                                    <%= lang.navLang %>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <li>
@@ -54,10 +54,6 @@
                                         <a class="dropdown-item" style="color: #011627"
                                            href="/lang?url=flat/<%= flat[0]._id %>&lang=ua">UA</a>
                                     </li>
-                                    <li>
-                                        <a class="dropdown-item" style="color: #011627"
-                                           href="/lang?url=flat/<%= flat[0]._id %>&lang=rus">RUS</a>
-                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -67,14 +63,14 @@
         </nav>
     </div>
     <div class="row main">
-        <div class="col-12 h2 text-center">Про квартиру</div>
+        <div class="col-12 h2 text-center"><%= lang.aboutFlat %></div>
         <div class="col-12 col-sm-4">
             <div class="row">
                 <img src="../img/flat-plan.jpg" class="card-img-top" alt="flat-plan">
             </div>
             <div class="row my-3 p-2">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal">
-                    Зв'язатися з нами
+                    <%= lang.contactUs %>
                 </button>
             </div>
         </div>
@@ -82,41 +78,41 @@
             <table class="table table-striped">
                 <tbody>
                 <tr>
-                    <th scope="row">Тип</th>
+                    <th scope="row"><%= lang.type %></th>
                     <td><span class="badge bg-secondary"><%= flat[0].type %></span></td>
                 </tr>
                 <tr>
-                    <th scope="row">Статус</th>
+                    <th scope="row"><%= lang.status %></th>
                     <td>
                         <% if(flat[0].status === "built"){ %>
-                            <span class="badge bg-primary">Побудовано</span>
+                            <span class="badge bg-primary"><%= lang.built %></span>
                         <% } else{ %>
-                            <span class="badge bg-warning">У будівництві</span>
+                            <span class="badge bg-warning"><%= lang.constr %></span>
                         <% } %>
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">Квадратні метри</th>
+                    <th scope="row"><%= lang.sqr %></th>
                     <td><%= flat[0].sqr_all %> m2</td>
                 </tr>
                 <tr>
-                    <th scope="row">Жилі квадратні метри</th>
+                    <th scope="row"><%= lang.sqrLiving %></th>
                     <td><%= flat[0].sqr_living %> m2</td>
                 </tr>
                 <tr>
-                    <th scope="row">Ціна за квадратний метр</th>
+                    <th scope="row"><%= lang.priceSqr %></th>
                     <td><%= flat[0].sqr_price %> ₴</td>
                 </tr>
                 <tr>
-                    <th scope="row">Кімнати</th>
+                    <th scope="row"><%= lang.rooms %></th>
                     <td><%= flat[0].rooms %></td>
                 </tr>
                 <tr>
-                    <th scope="row">Поверх</th>
+                    <th scope="row"><%= lang.floor %></th>
                     <td><%= flat[0].floor %></td>
                 </tr>
                 <tr>
-                    <th scope="row">Секція|Будинок</th>
+                    <th scope="row"><%= lang.section %>|<%= lang.building %></th>
                     <td><%= flat[0].section %>|<%= flat[0].building %></td>
                 </tr>
                 </tbody>
@@ -131,11 +127,11 @@
                         <div class="modal-body">
                             <form action="/request" method="post">
                                 <div class="mb-2">
-                                    <label for="InputName" class="form-label">Ім'я</label>
+                                    <label for="InputName" class="form-label"><%= lang.contactsName %></label>
                                     <input type="text" class="form-control" id="InputName" name="InputName" required>
                                 </div>
                                 <div class="mb-2">
-                                    <label for="InputTel" class="form-label">Тел</label>
+                                    <label for="InputTel" class="form-label"><%= lang.contactsTel %></label>
                                     <input type="tel" class="form-control" id="InputTel" name="InputTel" required>
                                 </div>
                                 <div class="mb-2">
@@ -143,12 +139,12 @@
                                     <input type="email" class="form-control" id="InputEmail" name="InputEmail" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="InputText" class="form-label">Повідомлення</label>
+                                    <label for="InputText" class="form-label"><%= lang.contactsText %></label>
                                     <textarea class="form-control" id="InputText" name="InputText" rows="3"
                                               required></textarea>
                                 </div>
                                 <input type="hidden" name="Id" value="<%= flat[0]._id %>">
-                                <button type="submit" class="btn btn-primary">Відправити</button>
+                                <button type="submit" class="btn btn-primary"><%= lang.contactsSubmit %></button>
                             </form>
                         </div>
                     </div>
