--- a/views/flats.ejs
+++ b/views/flats.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Flats</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -30,20 +30,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/flats">Квартири</a>
+                            <a class="nav-link" href="/flats"><%= lang.navFlats %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Контакти</a>
+                            <a class="nav-link" href="/contacts"><%= lang.navContacts %></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">Про нас</a>
+                            <a class="nav-link" href="/about"><%= lang.navAbout %></a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn btn-outline-warning dropdown-toggle"
                                         type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
                                         aria-expanded="false">
-                                    Мова
+                                    <%= lang.navLang %>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <li>
@@ -52,10 +52,6 @@
                                     </li>
                                     <li>
                                         <a class="dropdown-item" style="color: #011627" href="/lang?url=flats&lang=ua">UA</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" style="color: #011627"
-                                           href="/lang?url=flats&lang=rus">RUS</a>
                                     </li>
                                 </ul>
                             </div>
@@ -69,14 +65,14 @@
         <button class="btn btn-warning filter-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseFilter"
                 aria-expanded="false" aria-controls="collapseFilter">
-            Фільтри
+            <%= lang.collapseFilter %>
         </button>
         <div class="col-12 filter collapse" id="collapseFilter">
             <form action="/flats" method="post">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownType"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Тип
+                        <%= lang.type %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownType">
                         <% for (let i = 0; i < types.length; i++) { %>
@@ -95,7 +91,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownStatus"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Статус
+                        <%= lang.status %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownStatus">
                         <% for (let i = 0; i < statuses.length; i++) { %>
@@ -114,7 +110,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownArea"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Квадратні метри
+                        <%= lang.sqr %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownArea">
                         <li>
@@ -132,7 +128,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownRooms"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Кімнати
+                        <%= lang.rooms %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownRooms">
                         <% for (let i = 0; i < rooms.length; i++) { %>
@@ -151,7 +147,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownFloor"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Певерх
+                        <%= lang.floor %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownFloor">
                         <li>
@@ -169,7 +165,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownSection"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Секція
+                        <%= lang.section %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownSection">
                         <% for (let i = 0; i < sections.length; i++) { %>
@@ -188,7 +184,7 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownBuilding"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                        Будинок
+                        <%= lang.building %>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownBuilding">
                         <% for (let i = 0; i < buildings.length; i++) { %>
@@ -204,7 +200,7 @@
                         <% } %>
                     </ul>
                 </div>
-                <button type="submit" class="btn btn-primary">Фільтрувати</button>
+                <button type="submit" class="btn btn-primary"><%= lang.filter %></button>
             </form>
         </div>
         <div class="col-12 items">
@@ -216,23 +212,23 @@
                                 <img src="./img/flat-plan.jpg" class="card-img-top" alt="flat-plan">
                                 <div class="card-body">
                                     <p class="card-text text-center">
-                                        <span class="badge bg-secondary">Тип: <%= flats[i].type %></span>
-                                        <span class="badge bg-primary">Статус: <%= flats[i].status %></span>
+                                        <span class="badge bg-secondary"><%= lang.type %>: <%= flats[i].type %></span>
+                                        <span class="badge bg-primary"><%= lang.status %>: <%= flats[i].status %></span>
                                     </p>
                                     <p class="card-text">
-                                        <i class="fa-solid fa-layer-group"></i> Квадратні метри
+                                        <i class="fa-solid fa-layer-group"></i> <%= lang.sqr %>
                                         : <%= flats[i].sqr_all %>
                                     </p>
                                     <p class="card-text">
-                                        <i class="fa-solid fa-person-booth"></i> Кімнати
+                                        <i class="fa-solid fa-person-booth"></i> <%= lang.rooms %>
                                         : <%= flats[i].rooms %>
                                     </p>
                                     <p class="card-text">
-                                        <i class="fa-solid fa-stairs"></i> Поверх : <%= flats[i].floor %>
+                                        <i class="fa-solid fa-stairs"></i> <%= lang.floor %> : <%= flats[i].floor %>
                                     </p>
                                     <p class="card-text">
-                                        Секція<%= flats[i].section %>
-                                        | Будинок> <%= flats[i].building %>
+                                        <%= lang.section %> <%= flats[i].section %>
+                                        | <%= lang.building %> <%= flats[i].building %>
                                     </p>
                                 </div>
                             </div>
